# tried

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.document/: 00_control.md  01.md
.repos/: COMMITS.txt  clone.sh  data-sources.md
config/: config.yaml  experiment.yaml  finetuning_dpo.yaml  finetuning_sft.yaml  specs.yaml
docs/: architecture.md  benchmarking-protocol.md  corpus.md  decision-log.md  dev-setup-lenovo.md  dev-setup-macbook.md  eval-stats.md  finetuning.md  model-choices.md  repeatability.md  schema.md  specs.yaml  tolerance-policy.md
eval/holdout/: synthetic_fusions.jsonl
eval/results/qwen2.5-coder:14b-mlx-base/: eval_rows.jsonl
eval/results/qwen2.5-coder:14b-sft/: eval_rows.jsonl
eval/results/qwen2.5-coder:14b-vanilla/: eval_rows.jsonl
scripts/: collect_lenovo_specs.sh  download_mlx_base_model.sh
scripts/v1Scraper/: v1Scraper.ipynb
scripts/v1Scraper/results/: corpus_train.jsonl  corpus_train_manifest.json  skipped.jsonl
scripts/v2Scraper/: validate_and_export.ipynb
scripts/v2Scraper/results/: corpus_train.jsonl
scripts/v2Scraper/skeletons/: curated_skeletons.py
tests/: mock_server.py  pipeline_test.py
