[project]
name = "tried"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tried-orchestrator",
    "tried-shared",
    "tried-stats",
    "tried-tests",
]

[tool.uv.sources]
tried-orchestrator = { workspace = true }
tried-shared = { workspace = true }
tried-stats = { workspace = true }
tried-tests = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "python-dotenv>=1.0",
]
